--- a/messi.html
+++ b/messi.html
@@ -4,7 +4,7 @@
     <title> Myself </title>
     </head>
     <h1 style="background-color:yellowgreen;font-size: 50px;text-align:center"> Myself </style></h1>
-    <img src="messi.jpg" height="200" width="150" title="AL Tayben">
+    <img src="img/tabu.jpg" height="200" width="150" title="AL Tayben">
     <h2><mark>Introduction:</mark></h2>
     <p> <strong>My name is Al Tayben.</br>
     I am 22 years old.</br>
